provisioning/kubernetes/elastic-stack/src/kibana-oauth-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: oauth2-proxy
  namespace: gitlab-managed-apps
spec:
  rules:
  - host: kibana.ets-shared-uat1.tech.totalticketing.com
    http:
      paths:
      - backend:
          serviceName: oauth2-oauth2-proxy
          servicePort: 80
        path: /oauth2
  tls:
  - hosts:
    - kibana.ets-shared-uat1.tech.totalticketing.com
    secretName:  oauth2-noc-tls
